--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "14fa4626",
+   "id": "b7889234",
    "metadata": {},
    "outputs": [
     {
@@ -20,13 +20,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "58d296e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mateusz\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = 'Mateusz'\n",
+    "print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3d650fda",
+   "id": "50d7e3b9",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "name = 'Mate'"
-   ]
+   "source": []
   }
  ],
  "metadata": {
