--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "035d6d25",
+   "id": "f7f680b7",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5060b882",
+   "id": "b2e1ffdb",
    "metadata": {},
    "outputs": [
     {
@@ -38,8 +38,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "0556608e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome Przemek nice too meet you !\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = \"Przemek\"\n",
+    "print (\"Welcome\",name,\"nice too meet you !\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "610d80db",
+   "id": "b29b55d9",
    "metadata": {},
    "outputs": [],
    "source": []
