--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "61f33e5c",
+   "id": "e7a7e58e",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7ae4a5c3",
+   "id": "4dc7e8e0",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82ad4e58",
+   "id": "4b8fcf7b",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "472371f4",
+   "id": "4b3653dc",
    "metadata": {},
    "source": [
     "# Quick intro to Jupyter\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae12de14",
+   "id": "34b75113",
    "metadata": {},
    "source": [
     "# What is a programming language?\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6af6699b",
+   "id": "479ce9cf",
    "metadata": {},
    "source": [
     "# Our Jupyter server\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd9f921f",
+   "id": "344fafe5",
    "metadata": {},
    "source": [
     "# Printing text and numbers"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "7c7e6a6c",
+   "id": "8cb93f56",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "10e96c06",
+   "id": "7e98b9ce",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6f9c373c",
+   "id": "9638ddad",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c1ae7167",
+   "id": "79696a25",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "004bbb20",
+   "id": "cb44d1fb",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "8140b3fe",
+   "id": "dc266e59",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e57bb180",
+   "id": "cccc214b",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "705baba8",
+   "id": "fcd07b77",
    "metadata": {},
    "source": [
     "# Variables and assignment\n",
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "74fb53fd",
+   "id": "18a51689",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "139e96ae",
+   "id": "2e6af57e",
    "metadata": {},
    "source": [
     "# Quotes or no quotes?\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "156749ff",
+   "id": "0233e3bc",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f44b90de",
+   "id": "124d23d5",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc759ee1",
+   "id": "f3e169c4",
    "metadata": {},
    "source": [
     "# Variable names\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0c38a54a",
+   "id": "75daa4ea",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "4146a883",
+   "id": "6949d91c",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0d633506",
+   "id": "12b4c0ee",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e8e4d5a6",
+   "id": "02fb8cb5",
    "metadata": {},
    "outputs": [
     {
@@ -526,19 +526,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4dd1b578",
+   "id": "31902453",
    "metadata": {},
    "source": [
     "# Exercise: Greet yourself\n",
     "\n",
     "1. Assign the variable `name` to your name.\n",
-    "2. Use `print` to display a nice greeting to yourself."
+    "2. Use `print` to display a nice greeting to yourself.\n",
+    "\n",
+    "To put a cell in markdown mode, use `ESC` and then `m`. Then you can type Markdown comments/text."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ec290be5",
+   "id": "072e18fb",
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "879004be",
+   "id": "d8c0f550",
    "metadata": {},
    "outputs": [],
    "source": []
