--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f2782d90",
+   "id": "8a21d30b",
    "metadata": {},
    "outputs": [
     {
@@ -20,14 +20,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "44715749",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Joe' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m name \u001b[38;5;241m=\u001b[39m \u001b[43mJoe\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHello \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m name \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhow are you?\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Joe' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "name = Joec\n",
+    "print(\"Hello \" + name + \"how are you?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c23f6ff1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Joe. How are you?\n"
+     ]
+    }
+   ],
+   "source": [
+    "name=\"Joe\"\n",
+    "print (\"Hello \" + name + \". How are you?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d3f662fa",
+   "id": "785a0cee",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "name = Joe\n",
-    "pring(\"Hello \" + \"name\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
