--- a/Sara_02092024.ipynb
+++ b/Sara_02092024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "72bdad13",
+   "id": "7a79703e",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "13eb8de6",
+   "id": "17565ce6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "baa58e23",
+   "id": "946cb706",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ae89bb07",
+   "id": "bf794bc2",
    "metadata": {},
    "outputs": [
     {
@@ -71,22 +71,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "5657dc78",
+   "execution_count": 6,
+   "id": "5d78bcea",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (470501285.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[5], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    name = \"Sara\" print('Hello, ' +name)\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Sara\n"
      ]
     }
    ],
    "source": [
-    "name = \"Sara\" print('Hello, ' +name)"
+    "name = \"Sara\" \n",
+    "print('Hello, ' +name)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae627ebc",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
