--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "89035555",
+   "id": "5de64c0f",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ddca44f9",
+   "id": "9a93ecf4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "251d1661",
+   "id": "f0f32657",
    "metadata": {},
    "outputs": [
     {
@@ -48,13 +48,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "id": "4b68a5da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good morning! Happy new week :D Asma\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Good morning! Happy new week :D '+ name)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "cfe4a5ca",
+   "id": "36b51f70",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print('')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
