--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "53168305",
+   "id": "12286711",
    "metadata": {},
    "outputs": [
     {
@@ -21,17 +21,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc0fbb37",
+   "id": "695d7787",
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = (Habib)"
+    "name = 'Habib'\n",
+    "print(Hello,)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43328fa6",
+   "id": "52dbd332",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -39,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "333be412",
+   "id": "373f0681",
    "metadata": {},
    "outputs": [],
    "source": []
