--- a/shrasin2.ipynb
+++ b/shrasin2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6ce66c88",
+   "id": "c411fab3",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2d0ab0b0",
+   "id": "a6a26a4e",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "98c1fbde",
+   "id": "d99588ce",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fb5a2d8b",
+   "id": "b0beb15e",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "84a23650",
+   "id": "b722fd4e",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5056aad9",
+   "id": "d4c29184",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "def981d9",
+   "id": "b28468de",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5dc436c6",
+   "id": "a665dfeb",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "063f0976",
+   "id": "2e26a6b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,14 +174,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fffe16d1",
+   "execution_count": 10,
+   "id": "dd0f2791",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello everyone, i am shraddha\n"
+     ]
+    }
+   ],
    "source": [
     "name = 'shraddha'\n",
-    "pri"
+    "print('hello everyone, i am ' + name)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b43ea4fd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
