--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c987a477",
+   "id": "354eb032",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ca0d64e9",
+   "id": "0dbf8590",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "514b5c29",
+   "id": "0aaad227",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "47b449b1",
+   "id": "c1f5b843",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "19337725",
+   "id": "1abae9fd",
    "metadata": {},
    "outputs": [
     {
@@ -98,11 +98,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "670ec128",
+   "id": "d470f3f6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = "
+    "name = 'Jaspreet'\n",
+    "print ('Happy Monday, ' + name)"
    ]
   }
  ],
