--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -38,28 +38,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "3149d30c",
+   "execution_count": 10,
+   "id": "ac967771",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HEllo Dmitrii\n"
+      "HEllo Dmitrii 10\n",
+      "1025\n"
      ]
     }
    ],
    "source": [
-    "x = 'abcd'\n",
+    "x = '10'\n",
+    "y = '25'\n",
     "name = 'Dmitrii'\n",
-    "print ('HEllo '+name) "
+    "print ('HEllo '+name+' '+x) #print hello name\n",
+    "print(x+y)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "538237de",
+   "id": "eb2e2152",
    "metadata": {},
    "outputs": [],
    "source": []
