--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "261f683b",
+   "id": "be2bd902",
    "metadata": {},
    "outputs": [
     {
@@ -20,8 +20,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "df80b273",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fatos\n"
+     ]
+    }
+   ],
+   "source": [
+    "name= \"Fatos\"\n",
+    "print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e723d59d",
+   "id": "c893eec6",
    "metadata": {},
    "outputs": [],
    "source": []
