--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f7f680b7",
+   "id": "e32f16ba",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b2e1ffdb",
+   "id": "6106da45",
    "metadata": {},
    "outputs": [
     {
@@ -38,27 +38,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "0556608e",
+   "execution_count": 7,
+   "id": "6c8267af",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Welcome Przemek nice too meet you !\n"
+      "Welcome Przemek nice too meet you !\n",
+      "good job done\n"
      ]
     }
    ],
    "source": [
     "name = \"Przemek\"\n",
-    "print (\"Welcome\",name,\"nice too meet you !\")"
+    "print (\"Welcome\",name,\"nice too meet you !\")\n",
+    "# marrkdown to komentarz\n",
+    "print (\"good job done\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b29b55d9",
+   "id": "7a9853c1",
    "metadata": {},
    "outputs": [],
    "source": []
