--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "12286711",
+   "id": "b2795cf7",
    "metadata": {},
    "outputs": [
     {
@@ -20,19 +20,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "695d7787",
+   "execution_count": 4,
+   "id": "e25e5cc8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Habib\n"
+     ]
+    }
+   ],
    "source": [
     "name = 'Habib'\n",
-    "print(Hello,)"
+    "print('Hello, '+ name)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52dbd332",
+   "id": "aa285ba9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -40,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "373f0681",
+   "id": "24526620",
    "metadata": {},
    "outputs": [],
    "source": []
