--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "354eb032",
+   "id": "7564ef3d",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "0dbf8590",
+   "id": "4ee530da",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0aaad227",
+   "id": "a0c959bb",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c1f5b843",
+   "id": "3a02f754",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1abae9fd",
+   "id": "4216bf58",
    "metadata": {},
    "outputs": [
     {
@@ -97,13 +97,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d470f3f6",
+   "execution_count": 11,
+   "id": "33498fd7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Happy Monday, Jaspreet\n"
+     ]
+    }
+   ],
    "source": [
     "name = 'Jaspreet'\n",
     "print ('Happy Monday, ' + name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "342ea6a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Happy Monday Jaspreet\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = 'Jaspreet'\n",
+    "print ('Happy Monday', name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cf8f2c9",
+   "metadata": {},
+   "source": [
+    "#"
    ]
   }
  ],
