--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -38,31 +38,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "ac967771",
+   "execution_count": 16,
+   "id": "a4a86c93",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HEllo Dmitrii 10\n",
-      "1025\n"
+      "HElloname\n",
+      "250\n"
      ]
     }
    ],
    "source": [
-    "x = '10'\n",
-    "y = '25'\n",
+    "x = 10\n",
+    "y = 25\n",
     "name = 'Dmitrii'\n",
-    "print ('HEllo '+name+' '+x) #print hello name\n",
-    "print(x+y)"
+    "print ('HEllo' + 'name') #print hello name\n",
+    "print(x*y)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb2e2152",
+   "id": "53c16c1c",
    "metadata": {},
    "outputs": [],
    "source": []
