--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e7a7e58e",
+   "id": "880591c1",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4dc7e8e0",
+   "id": "8b3ba452",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b8fcf7b",
+   "id": "8f5c3b61",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b3653dc",
+   "id": "4acd673c",
    "metadata": {},
    "source": [
     "# Quick intro to Jupyter\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34b75113",
+   "id": "30588680",
    "metadata": {},
    "source": [
     "# What is a programming language?\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "479ce9cf",
+   "id": "9cae206d",
    "metadata": {},
    "source": [
     "# Our Jupyter server\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "344fafe5",
+   "id": "5c6c9e7f",
    "metadata": {},
    "source": [
     "# Printing text and numbers"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8cb93f56",
+   "id": "022531f7",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7e98b9ce",
+   "id": "6546b973",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9638ddad",
+   "id": "3744fafe",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "79696a25",
+   "id": "76289bc5",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cb44d1fb",
+   "id": "4368c043",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "dc266e59",
+   "id": "9145c889",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cccc214b",
+   "id": "de81c1e0",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcd07b77",
+   "id": "ce674a44",
    "metadata": {},
    "source": [
     "# Variables and assignment\n",
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "18a51689",
+   "id": "e7499dd6",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e6af57e",
+   "id": "a07551fe",
    "metadata": {},
    "source": [
     "# Quotes or no quotes?\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "0233e3bc",
+   "id": "37b2f74c",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "124d23d5",
+   "id": "6c7ef22a",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3e169c4",
+   "id": "07c32e45",
    "metadata": {},
    "source": [
     "# Variable names\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "75daa4ea",
+   "id": "597a5b45",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6949d91c",
+   "id": "81ef1ad8",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "12b4c0ee",
+   "id": "296a238b",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "02fb8cb5",
+   "id": "a37a5d94",
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31902453",
+   "id": "7ffcab42",
    "metadata": {},
    "source": [
     "# Exercise: Greet yourself\n",
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "072e18fb",
+   "id": "a824dcb1",
    "metadata": {},
    "outputs": [
     {
@@ -559,9 +559,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "30f2c030",
+   "metadata": {},
+   "source": [
+    "# To use Markdown mode\n",
+    "\n",
+    "1. Go into a new, empty cell\n",
+    "2. Change the type of the cell to Markdown -- most easily, by using `ESC` (enter command mode) and then `m` (to enter Markdown mode). You can also just use the menu at the top.\n",
+    "3. You have to re-enter edit mode by clicking inside of the cell or pressing `ENTER`.\n",
+    "4. You can type using Markdown.\n",
+    "\n",
+    "### A few Markdown things:\n",
+    "\n",
+    "- Headlines use `#` (largest headline) `##` (next largest headline), etc.\n",
+    "- Bulleted lists with `-` at the start of the line, or indented for multi-level outlines\n",
+    "- Numbered lists use numbers at the start of the line (or indented)\n",
+    "- Literal code should be in backticks `\\``"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8c0f550",
+   "id": "50c2998b",
    "metadata": {},
    "outputs": [],
    "source": []
