--- a/Asma Alnuairat 2-Sep.ipynb
+++ b/Asma Alnuairat 2-Sep.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "4b68a5da",
    "metadata": {},
    "outputs": [
@@ -61,13 +61,24 @@
     }
    ],
    "source": [
-    "print('Good morning! Happy new week :D '+ name)"
+    "print('Good morning! Happy new week :D '+ name) # print practice"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "239bee35",
+   "metadata": {},
+   "source": [
+    "# new exercise\n",
+    "\n",
+    "1-\n",
+    "2-"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36b51f70",
+   "id": "0ad84fee",
    "metadata": {},
    "outputs": [],
    "source": []
