--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "880591c1",
+   "id": "d8b37b47",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8b3ba452",
+   "id": "78430023",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f5c3b61",
+   "id": "444ff9e6",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4acd673c",
+   "id": "abbcddaa",
    "metadata": {},
    "source": [
     "# Quick intro to Jupyter\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30588680",
+   "id": "8a2a4fa4",
    "metadata": {},
    "source": [
     "# What is a programming language?\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cae206d",
+   "id": "86547e36",
    "metadata": {},
    "source": [
     "# Our Jupyter server\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c6c9e7f",
+   "id": "95019139",
    "metadata": {},
    "source": [
     "# Printing text and numbers"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "022531f7",
+   "id": "424f9625",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6546b973",
+   "id": "1efef2dd",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3744fafe",
+   "id": "074f1a76",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "76289bc5",
+   "id": "3fb5fcc7",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4368c043",
+   "id": "4cc94e42",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9145c889",
+   "id": "9428cfd6",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "de81c1e0",
+   "id": "cd9d5bff",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce674a44",
+   "id": "19f9f4ed",
    "metadata": {},
    "source": [
     "# Variables and assignment\n",
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e7499dd6",
+   "id": "20fc7aa2",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a07551fe",
+   "id": "e1ffabc5",
    "metadata": {},
    "source": [
     "# Quotes or no quotes?\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "37b2f74c",
+   "id": "9121fe55",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6c7ef22a",
+   "id": "d62b7969",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07c32e45",
+   "id": "c7687c03",
    "metadata": {},
    "source": [
     "# Variable names\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "597a5b45",
+   "id": "9a35e9aa",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "81ef1ad8",
+   "id": "81fb2984",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "296a238b",
+   "id": "70425ed0",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a37a5d94",
+   "id": "3056f020",
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ffcab42",
+   "id": "27e54180",
    "metadata": {},
    "source": [
     "# Exercise: Greet yourself\n",
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a824dcb1",
+   "id": "174083a0",
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30f2c030",
+   "id": "001866d6",
    "metadata": {},
    "source": [
     "# To use Markdown mode\n",
@@ -575,13 +575,13 @@
     "- Headlines use `#` (largest headline) `##` (next largest headline), etc.\n",
     "- Bulleted lists with `-` at the start of the line, or indented for multi-level outlines\n",
     "- Numbered lists use numbers at the start of the line (or indented)\n",
-    "- Literal code should be in backticks `\\``"
+    "- Literal code should be in backticks, using `"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50c2998b",
+   "id": "8af00408",
    "metadata": {},
    "outputs": [],
    "source": []
