--- a/shrasin2.ipynb
+++ b/shrasin2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "552cc404",
+   "id": "7d42909d",
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6d12217b",
+   "id": "364fb577",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "578b086f",
+   "id": "a7fd58f4",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9da60a27",
+   "id": "9bef2ae6",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "67d909be",
+   "id": "d3b4c654",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "60779512",
+   "id": "51b367bc",
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5d96b38f",
+   "id": "3eaf8026",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9f75f786",
+   "id": "8a10294f",
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e7ebe889",
+   "id": "de6fcd7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b6292cba",
+   "id": "31980095",
    "metadata": {},
    "outputs": [
     {
@@ -193,8 +193,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "359b098a",
+   "id": "2a8b3429",
    "metadata": {},
+   "source": [
+    "# markdown things\n",
+    "1. to type comments\n",
+    "### for sub headings\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd766ae3",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
