--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -38,15 +38,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "a4a86c93",
+   "execution_count": 20,
+   "id": "f2d14fdc",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HElloname\n",
+      "HEllo Dmitrii!\n",
       "250\n"
      ]
     }
@@ -55,14 +55,14 @@
     "x = 10\n",
     "y = 25\n",
     "name = 'Dmitrii'\n",
-    "print ('HEllo' + 'name') #print hello name\n",
+    "print ('HEllo ' + name + '!') #print hello name\n",
     "print(x*y)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53c16c1c",
+   "id": "028e0665",
    "metadata": {},
    "outputs": [],
    "source": []
