--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1db5a5d1",
+   "id": "188e7c5e",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5860bfb0",
+   "id": "60abf9f7",
    "metadata": {},
    "outputs": [
     {
@@ -39,8 +39,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce823a1c",
+   "id": "4ea5cc8a",
    "metadata": {},
+   "source": [
+    "#"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7fc57d8",
+   "metadata": {},
+   "source": [
+    "# paragraph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2683fb48",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
