--- a/Prem 2Sep2024.ipynb
+++ b/Prem 2Sep2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e32f16ba",
+   "id": "db6e65c6",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6106da45",
+   "id": "fc3775b5",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "6c8267af",
+   "id": "fdc36fdf",
    "metadata": {},
    "outputs": [
     {
@@ -59,9 +59,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "429b312d",
+   "metadata": {},
+   "source": [
+    "to jest opis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "440e9dcb",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2155977952.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[8], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    to jest opis\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "to jest opis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a9853c1",
+   "id": "bdf30d33",
    "metadata": {},
    "outputs": [],
    "source": []
