--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "add9c15c",
+   "id": "1e47b498",
    "metadata": {},
    "outputs": [
     {
@@ -20,33 +20,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "f6fa5312",
+   "execution_count": 4,
+   "id": "5712675e",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Joe' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m name \u001b[38;5;241m=\u001b[39m \u001b[43mJoe\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHello \u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m name \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhow are you?\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Joe' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Joehow are you?\n"
      ]
     }
    ],
    "source": [
-    "name = Joec\n",
+    "name = \"Joe\"\n",
     "print(\"Hello \" + name + \"how are you?\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "466b0bb3",
+   "id": "da73cfad",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d09ea82",
+   "id": "6be84bba",
    "metadata": {},
    "outputs": [],
    "source": []
