--- a/Ahmed Habib , 2nd Sep 2024.ipynb
+++ b/Ahmed Habib , 2nd Sep 2024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f06f3d73",
+   "id": "5e0528f8",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f77e2c59",
+   "id": "571fb851",
    "metadata": {},
    "outputs": [
     {
@@ -39,30 +39,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "dfe590d9",
+   "execution_count": 8,
+   "id": "3a94beb0",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'Younis' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m x\u001b[38;5;241m=\u001b[39m \u001b[43mYounis\u001b[49m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'Younis' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Sons, YounisNouh\n"
      ]
     }
    ],
    "source": [
-    "x= 'Y'"
+    "x= 'Younis'\n",
+    "y= 'Nouh'\n",
+    "print ('Hello Sons, ' + x +  y)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfe4c58b",
+   "id": "e234dc9c",
    "metadata": {},
    "outputs": [],
    "source": []
