--- a/Jaspreet_09022024.ipynb
+++ b/Jaspreet_09022024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "0a0522cf",
+   "id": "6d51f199",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2369d1f9",
+   "id": "0b4f833b",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fa18e4ef",
+   "id": "d846899b",
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "91cd48e3",
+   "id": "79bfbe46",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e87879e0",
+   "id": "49155e9e",
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d06afd58",
+   "id": "c470bee4",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "4aa4f0b2",
+   "id": "aa04603a",
    "metadata": {},
    "outputs": [
     {
@@ -135,11 +135,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f498a0f4",
+   "id": "a5cbcd16",
    "metadata": {},
    "source": [
-    "#Enter\n"
+    "#Exercise Greet Yourself\n",
+    "1. Assign the variable `name` to your name.\n",
+    "2. Use `print` to display a nice greeting to yourself.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13f0dd05",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
