--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -38,15 +38,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "f2d14fdc",
+   "execution_count": 21,
+   "id": "b4b8dc2d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HEllo Dmitrii!\n",
+      "HEllo, Dmitrii!\n",
       "250\n"
      ]
     }
@@ -55,14 +55,33 @@
     "x = 10\n",
     "y = 25\n",
     "name = 'Dmitrii'\n",
-    "print ('HEllo ' + name + '!') #print hello name\n",
+    "print ('HEllo, ' + name + '!') #print hello name\n",
     "print(x*y)"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "id": "29aabafe",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1418818110.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[22], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    input name\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "input name"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "028e0665",
+   "id": "d7993dd1",
    "metadata": {},
    "outputs": [],
    "source": []
