--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -2,8 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "e2157bac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fatos\n"
+     ]
+    }
+   ],
+   "source": [
+    "name= \"Fatos\"\n",
+    "print (name)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "c7ccd5e4",
+   "id": "aef7d6f3",
    "metadata": {},
    "outputs": [],
    "source": []
