--- a/Reuven - September 2nd.ipynb
+++ b/Reuven - September 2nd.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d8b37b47",
+   "id": "52fb3f53",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "78430023",
+   "id": "3fd8839f",
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "444ff9e6",
+   "id": "89b81abf",
    "metadata": {},
    "source": [
     "# Agenda\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "abbcddaa",
+   "id": "317c7000",
    "metadata": {},
    "source": [
     "# Quick intro to Jupyter\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a2a4fa4",
+   "id": "75f5f72a",
    "metadata": {},
    "source": [
     "# What is a programming language?\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86547e36",
+   "id": "9c809dca",
    "metadata": {},
    "source": [
     "# Our Jupyter server\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95019139",
+   "id": "ff971de2",
    "metadata": {},
    "source": [
     "# Printing text and numbers"
@@ -194,7 +194,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "424f9625",
+   "id": "cd4780b8",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1efef2dd",
+   "id": "9d09d88c",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "074f1a76",
+   "id": "b5f45665",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3fb5fcc7",
+   "id": "799bf8b0",
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4cc94e42",
+   "id": "20cf5d81",
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9428cfd6",
+   "id": "51960056",
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cd9d5bff",
+   "id": "bc77733b",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19f9f4ed",
+   "id": "320fcdd7",
    "metadata": {},
    "source": [
     "# Variables and assignment\n",
@@ -353,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "20fc7aa2",
+   "id": "bc78231a",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1ffabc5",
+   "id": "8a94a46f",
    "metadata": {},
    "source": [
     "# Quotes or no quotes?\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "9121fe55",
+   "id": "d9abb985",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d62b7969",
+   "id": "b99f0cf2",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7687c03",
+   "id": "82a18ec5",
    "metadata": {},
    "source": [
     "# Variable names\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9a35e9aa",
+   "id": "02214acf",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "81fb2984",
+   "id": "f5d717ee",
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "70425ed0",
+   "id": "93dc5ac9",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3056f020",
+   "id": "ed5af3b2",
    "metadata": {},
    "outputs": [
     {
@@ -526,41 +526,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27e54180",
-   "metadata": {},
-   "source": [
-    "# Exercise: Greet yourself\n",
-    "\n",
-    "1. Assign the variable `name` to your name.\n",
-    "2. Use `print` to display a nice greeting to yourself.\n",
-    "\n",
-    "To put a cell in markdown mode, use `ESC` and then `m`. Then you can type Markdown comments/text."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "174083a0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "30\n"
-     ]
-    }
-   ],
-   "source": [
-    "x = 10  # here, I just press enter\n",
-    "y = 20  # here, I just press enter\n",
-    "\n",
-    "print(x+y)  # here, I'll press shift+Enter, and thus execute the entire cell"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "001866d6",
+   "id": "bdd9d9c5",
    "metadata": {},
    "source": [
     "# To use Markdown mode\n",
@@ -580,11 +546,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "id": "f6a8257d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 10  # here, I just press enter\n",
+    "y = 20  # here, I just press enter\n",
+    "\n",
+    "print(x+y)  # here, I'll press shift+Enter, and thus execute the entire cell"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd99a740",
+   "metadata": {},
+   "source": [
+    "# Exercise: Greet yourself\n",
+    "\n",
+    "1. Assign the variable `name` to your name.\n",
+    "2. Use `print` to display a nice greeting to yourself.\n",
+    "\n",
+    "To put a cell in markdown mode, use `ESC` and then `m`. Then you can type Markdown comments/text."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "cfbe1d84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Reuven!\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = 'Reuven'\n",
+    "print('Hello, ' + name + '!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15a58751",
+   "metadata": {},
+   "source": [
+    "# Getting input from the user\n",
+    "\n",
+    "If we want to get input from the user, we can use another function, `input`. When the `input` function is run in our program, it stops the program and waits for the user to type something. Whatever the user types is the *return value* of the `input` function -- meaning, the value that it holds in Python.\n",
+    "\n",
+    "We call `input` with one argument, a string -- the text that will be displayed to the user, when we're asking them to enter something."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "8af00408",
+   "id": "69761b77",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "inpu"
+   ]
   }
  ],
  "metadata": {
