--- a/Mateusz 02.09.24.ipynb
+++ b/Mateusz 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "188e7c5e",
+   "id": "bdcfebbe",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "60abf9f7",
+   "id": "4416db1e",
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ea5cc8a",
+   "id": "c1a848f0",
    "metadata": {},
    "source": [
     "#"
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7fc57d8",
+   "id": "846f10dd",
    "metadata": {},
    "source": [
     "# paragraph"
@@ -55,8 +55,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "3949a6c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HelloMateusz!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ('Hello' + name +'!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3081a76e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Mateusz!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ('Hello ' + name +'!')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2683fb48",
+   "id": "c848b908",
    "metadata": {},
    "outputs": [],
    "source": []
