--- a/Joe 02.09.24.ipynb
+++ b/Joe 02.09.24.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1e47b498",
+   "id": "dc4881e0",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5712675e",
+   "id": "f0db72e2",
    "metadata": {
     "scrolled": true
    },
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "da73cfad",
+   "id": "ed3f7525",
    "metadata": {},
    "outputs": [
     {
@@ -61,10 +61,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6be84bba",
+   "id": "605e0921",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "inpu"
+   ]
   }
  ],
  "metadata": {
