--- a/Sara_02092024.ipynb
+++ b/Sara_02092024.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "85ad477d",
+   "id": "d0df20a1",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a2a6951a",
+   "id": "cd04e410",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c09353f8",
+   "id": "17c52ad8",
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "5cfcdeea",
+   "id": "7e4097d0",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "66a6ddcc",
+   "id": "6f6aca3d",
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6569d66",
+   "id": "23f606da",
    "metadata": {},
    "source": [
     "## Bigger headline"
@@ -99,10 +99,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dfb46c1",
+   "id": "3ea7273d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "input('enter your name: ')\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
