--- a/Dmitrii 02.09.2024.ipynb
+++ b/Dmitrii 02.09.2024.ipynb
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b4b8dc2d",
+   "id": "c8b1777e",
    "metadata": {},
    "outputs": [
     {
@@ -61,27 +61,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "29aabafe",
+   "execution_count": 25,
+   "id": "c58b18c8",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1418818110.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[22], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    input name\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name: Dima\n"
      ]
     }
    ],
    "source": [
-    "input name"
+    "name = input ('name: ')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7993dd1",
+   "id": "bb6e9837",
    "metadata": {},
    "outputs": [],
    "source": []
