--- a/Fatos Blakaj Monday.ipynb
+++ b/Fatos Blakaj Monday.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "e2157bac",
+   "id": "0e972c6a",
    "metadata": {},
    "outputs": [
     {
@@ -21,8 +21,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "32f8e2fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter your name; Fatos\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Fatos'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "input(\"Enter your name; \")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "aef7d6f3",
+   "id": "1a4e5b98",
    "metadata": {},
    "outputs": [],
    "source": []
